# RatRacingEngine

./: CMakeLists.txt
projects/RatRacingGame/models/cube/: cube.mtl
projects/RatRacingGame/models/plate/: plate.mtl
projects/RatRacingGame/scenes/: scene-1.json
projects/RatRacingGame/scenes/startScene/: models
resources/scenes/scene1/: matrices  models
src/: main.cpp
src/Core/: Core.cpp  Core.h  Screen.h
src/Core/Input/: Input.cpp  Input.h  InputModes.h
src/Core/Time/: Time.cpp  Time.h
src/DeltaTime/: Time.h
src/Dispose/: IDisposable.h
src/Engine/: Engine.cpp  Engine.h
src/Engine/Project/: Project.cpp  Project.h
src/Engine/Project/Renderer/: RenderTypes.h  Renderer.cpp  Renderer.h
src/Engine/Project/Resources/: Resources.h
src/Engine/Project/Scene/: Scene.cpp  Scene.h  SceneJson.h
src/Engine/Scene/: Scene.cpp  Scene.h
src/Engine/Scene/GameObject/: GameObject.h
src/Engine/Scene/GameObject/Camera/: Camera.cpp  Camera.h
src/Engine/Scene/GameObject/Light/: Light.h
src/Engine/Scene/GameObject/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
src/Engine/Scene/GameObject/Model/: Model.cpp  Model.h
src/Engine/Scene/GameObject/Model/Material/: Material.h
src/Engine/Scene/GameObject/Model/Material/DefaultMaterial/: DefaultMaterial.cpp  DefaultMaterial.h
src/Engine/Scene/GameObject/Model/Material/TextureMaterial/: TextureMaterial.cpp
src/Engine/Scene/GameObject/Model/Material/TextureMaterial/Texture/: Texture.cpp
src/Engine/Scene/GameObject/Model/Mesh/: Mesh.cpp  Mesh.h
src/Engine/Shader/: Shader.cpp  Shader.h
src/Engine/Shader/Shaders/: default.vert
src/Engine/UI/: UIPresenter.cpp  UIPresenter.h
src/Engine/UserInterface/: UserInterface.cpp  UserInterface.h
src/Error/: Error.cpp  Error.h
src/GameObject/: GameObject.cpp  GameObject.h
src/GameObject/Components/Camera/: Camera.cpp  Camera.h
src/GameObject/Components/Light/: Light.cpp  Light.h
src/GameObject/Components/Light/PointLight/: PointLight.cpp  PointLight.h
src/GameObject/Components/Light/SpotLight/: SpotLight.cpp  SpotLight.h
src/GameObject/Components/Model/: Model.cpp  Model.h
src/GameObject/Components/Model/Mesh/: Mesh.cpp  Mesh.h
src/Input/: Input.cpp  Input.h
src/Material/: Material.cpp  Material.h
src/Material/DefaultMaterial/: DefaultMaterial.cpp  DefaultMaterial.h
src/Material/TextureMaterial/: TextureMaterial.cpp  TextureMaterial.h
src/Material/TextureMaterial/Texture/: Texture.cpp  Texture.h
src/Resources/: Resources.cpp  Resources.h
src/Shader/: Shader.cpp  Shader.h
src/Shader/Shaders/: default.frag
src/Utils/: Utils.cpp  Utils.h
